--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
               </span>
             </h1>
           </section>
-          <a class="btn btn-brand-main" href="#"><i class="fab fa-linkedin"></i> Linked in</a>
-          <a class="btn btn-brand-main" href="#"><i class="fab fa-github"></i> Github</a>
+          <a class="btn btn-brand-main" href="https://www.linkedin.com/in/hasanul-banna-a935421b2/"><i class="fab fa-linkedin"></i> Linked in</a>
+          <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna"><i class="fab fa-github"></i> Github</a>
           <a class="btn btn-brand-main" href="./HasanulBanna.pdf" download><i class="fas fa-download"></i> Resume</a>
         </div>
       </div>
