--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
               </span>
             </h1>
           </section>
-          <a class="btn btn-brand-main" href="https://www.linkedin.com/in/hasanul-banna-a935421b2/"><i class="fab fa-linkedin"></i> Linked in</a>
-          <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna"><i class="fab fa-github"></i> Github</a>
+          <a class="btn btn-brand-main" href="https://www.linkedin.com/in/hasanul-banna-a935421b2/" target="_blank"><i class="fab fa-linkedin"></i> Linked in</a>
+          <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna" target="_blank"><i class="fab fa-github"></i> Github</a>
           <a class="btn btn-brand-main" href="./HasanulBanna.pdf" download><i class="fas fa-download"></i> Resume</a>
         </div>
       </div>
@@ -234,6 +234,42 @@
       <h2 class="text-center mb-5"><b>Some Of My Projects</b></h2>
       <div class="container">
         <div class="d-flex flex-wrap justify-content-between">
+
+
+          <div class="project-card text-center">
+            <!-- ss slide -->
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./images/Doctors Portal SS/DP1.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Doctors Portal SS/DP2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Doctors Portal SS/DP3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Doctors Portal SS/DP4.png" alt="Fourth slide">
+                </div>
+              </div>
+            </div>
+            <!-- ss slide -->
+            <h5 class="my-3"><b>Doctors Portal</b></h5>
+            <div class="d-flex flex-wrap justify-content-around my-2">
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/react-native.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/bootstrap.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/firebase.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
+            </div>
+            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
+            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+          </div>
+
+
+
           <div class="project-card text-center">
             <!-- ss slide -->
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -291,7 +327,7 @@
             <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
           </div>
 
-          <div class="project-card text-center">
+          <div class="project-card text-center mt-3">
             <!-- ss slide -->
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -318,6 +354,41 @@
             <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
             <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
           </div>
+
+
+          <div class="project-card text-center mt-3">
+            <!-- ss slide -->
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./images/Apartment Hunt SS/AH1.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Apartment Hunt SS/AH2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Apartment Hunt SS/AH3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./images/Apartment Hunt SS/AH4.png" alt="Fourth slide">
+                </div>
+              </div>
+            </div>
+            <!-- ss slide -->
+            <h5 class="my-3"><b>Apartment Hunt</b></h5>
+            <div class="d-flex flex-wrap justify-content-around my-2">
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/react-native.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/bootstrap.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/firebase.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
+              <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
+            </div>
+            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
+            <a class="btn btn-brand-main" href="https://apartment-hunt-bd-984df.web.app/" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+          </div>
+
+
 
           <div class="project-card text-center mt-3">
             <!-- ss slide -->
