--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./hover-min.css">
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./jquery.animatedheadline.css">
 
 </head>
@@ -83,8 +83,10 @@
               </span>
             </h1>
           </section>
-          <a class="btn btn-brand-main" href="https://www.linkedin.com/in/hasanul-banna-a935421b2/" target="_blank"><i class="fab fa-linkedin"></i> Linked in</a>
-          <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna" target="_blank"><i class="fab fa-github"></i> Github</a>
+          <a class="btn btn-brand-main" href="https://www.linkedin.com/in/hasanul-banna-a935421b2/" target="_blank"><i
+              class="fab fa-linkedin"></i> Linked in</a>
+          <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna" target="_blank"><i
+              class="fab fa-github"></i> Github</a>
           <a class="btn btn-brand-main" href="./HasanulBanna.pdf" download><i class="fas fa-download"></i> Resume</a>
         </div>
       </div>
@@ -127,12 +129,12 @@
           </div>
           <div>
             <img src="https://img.icons8.com/color/48/000000/firebase.png" />
-            <h6>Fire-Auth</h6>
+            <h6>Firebase</h6>
           </div>
         </div>
       </div>
 
-      <div class="col-sm-6  my-3 p-3">
+      <!-- <div class="col-sm-6  my-3 p-3">
         <h4 class="my-3">Familiar</h4>
         <div class=" d-flex flex-wrap justify-content-between">
           <div>
@@ -152,7 +154,7 @@
             <h6>Next.js</h6>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="col-sm-6  my-3 p-3">
         <h4 class="my-3">Comfortable</h4>
@@ -195,10 +197,9 @@
             <h6>Mongodb</h6>
           </div>
         </div>
-
       </div>
 
-      <div class="col-sm-6  my-3 p-3">
+      <!-- <div class="col-sm-6  my-3 p-3">
         <h4 class="my-3">Tools</h4>
         <div class=" d-flex flex-wrap justify-content-between">
           <div>
@@ -222,7 +223,8 @@
             <h6>Heroku</h6>
           </div>
         </div>
-      </div>
+      </div> -->
+
     </div>
     </div>
   </section>
@@ -263,9 +265,9 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Doctor's appoinment MERN web application.</p>
+            <a class="btn btn-brand-main" href="https://doctors-portal-2021.web.app/" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna/Doctors-portal" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
 
@@ -293,9 +295,9 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/bootstrap.png" />
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/firebase.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Online food ordering React web application.</p>
+            <a class="btn btn-brand-main" href="https://red-onion-foods-52ba8.web.app/" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna/Red-onion-restaurent" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
           <div class="project-card text-center">
@@ -322,9 +324,9 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Online service selling MERN web application.</p>
+            <a class="btn btn-brand-main" href="https://creative-agency-2.web.app/" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="https://github.com/Hasanul-Banna/creative-agency" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
           <div class="project-card text-center mt-3">
@@ -350,9 +352,9 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/firebase.png" />
               <img style="height: 30px;" src="./images/Gmap.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Tour package booking React web application.</p>
+            <a class="btn btn-brand-main" href="#" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="#" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
 
@@ -383,9 +385,10 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="https://apartment-hunt-bd-984df.web.app/" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Apartment booking React web application.</p>
+            <a class="btn btn-brand-main" href="https://apartment-hunt-bd-984df.web.app/" target="_blank"><i
+                class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="#" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
 
@@ -413,9 +416,9 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/bootstrap.png" />
               <img style="height: 30px;" src="./images/jQuery.png" />
             </div>
-            <p>Features : Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, impedit?</p>
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-globe"></i> Website</a>&nbsp;
-            <a class="btn btn-brand-main" href="#"><i class="fas fa-code"></i> Code</a>
+            <p>Bangladeshi tour agency website landing-page </p>
+            <a class="btn btn-brand-main" href="#" target="_blank"><i class="fas fa-globe"></i> Website</a>&nbsp;
+            <a class="btn btn-brand-main" href="#" target="_blank"><i class="fas fa-code"></i> Code</a>
           </div>
 
         </div>
