--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/nodejs.png" />
               <img style="height: 30px;" src="https://img.icons8.com/color/48/000000/mongodb.png" />
             </div>
-            <p>Doctor's appoinment MERN web application.</p>
+            <p>Doctor's appointment booking MERN web application.</p>
             <a class="btn btn-brand-main hvr-icon-spin" href="https://doctors-portal-2021.web.app/" target="_blank"><i
                 class="fas fa-globe hvr-icon"></i> Website</a>&nbsp;
             <a class="btn btn-brand-main hvr-icon-spin" href="https://github.com/Hasanul-Banna/Doctors-portal" target="_blank"><i
@@ -488,7 +488,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="./images/Hotel Chain SS/hc1.png" alt="First slide">
+                  <img class="d-block w-100" src="./images/Hotel Chain SS/hc1.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./images/Hotel Chain SS/hc2.png" alt="Second slide">
