--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               class="fas fa-download hvr-icon"></i> Resume</a>
         </div>
       </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-duration="3000" data-aos-delay="500">
+      <div style="overflow-x: hidden !important;" class="col-md-6 d-flex justify-content-center" data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="500">
         <img id="biopic" src="./images/biopic.jpg" alt="">
       </div>
     </div>
