--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
   </section>
   <!-- About section end  -->
   <footer>
-    <span><i class="fas fa-copyright"></i> Copyright 2020 | All Right Reserved By Hasanul-Banna</span>
+    <span><i class="fas fa-copyright"></i> Copyright 2020 | All Right Reserved</span>
   </footer>
 
   <!-- Font awesome cdn -->
