--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
                 <b class="is-visible">Web Designer</b>
                 <b>Frontend Developer</b>
                 <b>React.JS Developer</b>
-                <b>MERN Stack Developer</b>
               </span>
             </h1>
           </section>
@@ -548,7 +547,7 @@
             You can send email directly from here or contact with me via,
           </p>
           <p><i class="fab fa-facebook-square"></i> Muhammad Hasanul Banna</p>
-          <p><i class="fab fa-whatsapp-square"></i> +880-168-063551</p>
+          <p><i class="fab fa-whatsapp-square"></i> +880-168-0063551</p>
           <p><i class="fas fa-envelope"></i> hasanulbanna006@gmail.com</p>
         </div>
         <div class="col-md-6 p-0 emailMe ">
