--- a/index.html
+++ b/index.html
@@ -90,11 +90,40 @@
               class="fas fa-download hvr-icon"></i> Resume</a>
         </div>
       </div>
-      <div style="overflow-x: hidden !important;" class="col-md-6 d-flex justify-content-center" data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="500">
+      <div style="overflow-x: hidden !important;" class="col-md-6 d-flex justify-content-center" data-aos="zoom-in"
+        data-aos-duration="3000" data-aos-delay="500">
         <img id="biopic" src="./images/biopic.jpg" alt="">
       </div>
     </div>
   </header>
+  <!-- Service section starts from here -->
+  <div class="container text-center text-white  my-5">
+    <h2 class="mb-5 theme-text "><b>Services</b></h2>
+    <div class="row ">
+      <div class="col-sm-4 service-card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="0">
+        <img src="./images/service img/Web design.jpg" alt="" class="w-50">
+        <p>Web Design</p>
+        <p class="text-justify">PSD/Sketch/Figma/XD to fully responsive, pixel-perfect & mobile friendly website
+          conversion. Professional looking custom webpage design with HTML, CSS, Bootstrap & jQuery which is W3C
+          validated ,all browser compatible, clean & hand coded.</p>
+      </div>
+      <div class="col-sm-4 service-card">
+        <img src="./images/service img/react.jpg" alt="" class="w-50">
+        <p>React App</p>
+        <p class="text-justify">Build highly interactive React web application with latest features of javaScript. State
+          management with redux / context api. Fully responsive , mobile friendly & attractive design with Material-UI.
+        </p>
+      </div>
+      <div class="col-sm-4 service-card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
+        <img src="./images/service img/wordpress.jpg" alt="" class="w-50">
+        <p>Wordpress</p>
+        <p class="text-justify">Wordpress theme customization. Professional looking landing page design with
+          Gutenburg/Elementor page builder. PSD to fully responsive, pixel-perfect, & mobile friendly wordpress
+          conversion.</p>
+      </div>
+    </div>
+  </div>
+  <!-- Service section ends here -->
 
   <!-- skills section start  -->
   <section style="overflow:hidden !important;" id="skills" class="container text-white text-center py-5">
@@ -159,6 +188,10 @@
       <div class="col-sm-6  my-3 p-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
         <h4 class="my-3">Comfortable</h4>
         <div class=" d-flex flex-wrap justify-content-between">
+          <div>
+            <img src="https://img.icons8.com/color/48/000000/wordpress.png" />
+            <h6>Wordpress</h6>
+          </div>
           <div>
             <img src="https://img.icons8.com/color/48/000000/material-ui.png" />
             <h6>Material-Ui</h6>
@@ -233,7 +266,7 @@
   <!-- projects section start  -->
   <section id="projects">
     <div class="project-container py-5">
-      <h2 class="text-center mb-5"><b>Some Of My Projects</b></h2>
+      <h2 class="text-center mb-5 theme-text"><b>Projects</b></h2>
       <div class="container">
         <div class="d-flex flex-wrap justify-content-around">
 
@@ -536,13 +569,14 @@
     <div class="container py-5 text-white">
       <h2>About Me</h2>
       <div class="row ">
-        <div class="col-md-6  text-white">
-          <p>I'm Hasanul Banna a front-end web developer. I love to create attractive websites with user friendly
+        <div class="col-md-6  text-white text-justify">
+          <p>I'm Hasanul Banna a front-end web developer, love to create attractive websites with user friendly
             experiences. I'm experienced in developing websites which are fully responsive to all kind of devices. I
-            have ability to write semantic, cross browser compatible clean code by hand that is re-useable, maintainable
-            and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap and JavaScript (with
-            jQuery-plugins & React). I also have intermediate knowledge of Node.js , mongodb .So if you are looking for
-            a front-end developer for your company, I can be the solution you're looking for. I am very much enthusiast
+            have ability to write semantic, cross browser compatible, clean code by hand that is re-useable,
+            maintainable and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap , JavaScript
+            (with jQuery-plugins & React) and wordpress theme custimization(with elementor). I also have intermediate
+            knowledge of Node.js, express.js & mongodb .So if you are looking for a front-end developer for your
+            company, I can be the solution you're looking for. I am very much enthusiast
             to show how my experience and skills meets your needs. <br>
             You can send email directly from here or contact with me via,
           </p>
@@ -554,11 +588,13 @@
           <form action="https://formspree.io/f/xwkwqjlj" method="post">
             <div class="form-group">
               <label for="Client">Name</label>
-              <input type="text" class="form-control text-white" id="Client" name="name" placeholder="Enter your name" required>
+              <input type="text" class="form-control text-white" id="Client" name="name" placeholder="Enter your name"
+                required>
             </div>
             <div class="form-group">
               <label for="email">Email Address</label>
-              <input type="email" class="form-control text-white" id="email" name="email" placeholder="Enter your email address" required>
+              <input type="email" class="form-control text-white" id="email" name="email"
+                placeholder="Enter your email address" required>
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Your Message</label>
