--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
   <div class="container text-center text-white  my-5">
     <h2 class="mb-5 theme-text "><b>Services</b></h2>
     <div class="row ">
-      <div class="col-sm-4 service-card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="0">
+      <div class="col-sm-4 service-card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="0">
         <img src="./images/service img/Web design.jpg" alt="" class="w-50">
         <p>Web Design</p>
         <p class="text-justify">PSD/Sketch/Figma/XD to fully responsive, pixel-perfect & mobile friendly website
           conversion. Professional looking custom webpage design with HTML, CSS, Bootstrap & jQuery which is W3C
           validated ,all browser compatible, clean & hand coded.</p>
       </div>
-      <div class="col-sm-4 service-card">
+      <div class="col-sm-4 service-card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="0">
         <img src="./images/service img/react.jpg" alt="" class="w-50">
         <p>React App</p>
         <p class="text-justify">Build highly interactive React web application with latest features of javaScript. State
           management with redux / context api. Fully responsive , mobile friendly & attractive design with Material-UI.
         </p>
       </div>
-      <div class="col-sm-4 service-card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
+      <div class="col-sm-4 service-card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="0">
         <img src="./images/service img/wordpress.jpg" alt="" class="w-50">
         <p>Wordpress</p>
         <p class="text-justify">Wordpress theme customization. Professional looking landing page design with
@@ -193,6 +193,14 @@
             <h6>Wordpress</h6>
           </div>
           <div>
+            <img style="height: 48px;" src="./images/jQuery.png">
+            <h6>jQuery</h6>
+          </div>
+          <div>
+            <img style="height: 48px" src="./images/materialize.png" />
+            <h6>Materialize</h6>
+          </div>
+          <div>
             <img src="https://img.icons8.com/color/48/000000/material-ui.png" />
             <h6>Material-Ui</h6>
           </div>
@@ -213,15 +221,7 @@
             </svg>
             <h6>Redux</h6>
           </div>
-          <div>
-            <img style="height: 48px" src="./images/materialize.png" />
-            <h6>Materialize</h6>
-          </div>
-          <div>
-            <img style="height: 48px;" src="./images/jQuery.png">
-            <h6>jQuery</h6>
-          </div>
-          <div>
+         <div>
             <img src="https://img.icons8.com/color/48/000000/nodejs.png" />
             <h6>Node.js</h6>
           </div>
