--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h2 class="mb-5 theme-text"><b>My Skills</b></h2>
     <div class="row">
       <div class="col-sm-6 my-3 p-3" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="0">
-        <h4 class="my-3">Key Skills</h4>
+        <!-- <h4 class="my-3">Key Skills</h4> -->
         <div class=" d-flex flex-wrap justify-content-between">
           <div>
             <img src="https://img.icons8.com/color/48/000000/html-5.png" />
@@ -156,9 +156,13 @@
             <img src="https://img.icons8.com/color/48/000000/react-native.png" />
             <h6>React</h6>
           </div>
-          <div>
+          <!-- <div>
             <img src="https://img.icons8.com/color/48/000000/firebase.png" />
             <h6>Firebase</h6>
+          </div> -->
+          <div>
+            <img style="height: 48px;" src="./images/jQuery.png">
+            <h6>jQuery</h6>
           </div>
         </div>
       </div>
@@ -186,15 +190,11 @@
       </div> -->
 
       <div class="col-sm-6  my-3 p-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
-        <h4 class="my-3">Comfortable</h4>
+        <!-- <h4 class="my-3">Comfortable</h4> -->
         <div class=" d-flex flex-wrap justify-content-between">
           <div>
             <img src="https://img.icons8.com/color/48/000000/wordpress.png" />
             <h6>Wordpress</h6>
-          </div>
-          <div>
-            <img style="height: 48px;" src="./images/jQuery.png">
-            <h6>jQuery</h6>
           </div>
           <div>
             <img style="height: 48px" src="./images/materialize.png" />
@@ -221,7 +221,7 @@
             </svg>
             <h6>Redux</h6>
           </div>
-         <div>
+          <div>
             <img src="https://img.icons8.com/color/48/000000/nodejs.png" />
             <h6>Node.js</h6>
           </div>
@@ -570,14 +570,14 @@
       <h2>About Me</h2>
       <div class="row ">
         <div class="col-md-6  text-white text-justify">
-          <p>I'm Hasanul Banna a front-end web developer, love to create attractive websites with user friendly
+          <p>I'm Hasanul Banna a front-end web developer, loves to create attractive websites with user-friendly
             experiences. I'm experienced in developing websites which are fully responsive to all kind of devices. I
-            have ability to write semantic, cross browser compatible, clean code by hand that is re-useable,
-            maintainable and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap , JavaScript
-            (with jQuery-plugins & React) and wordpress theme custimization(with elementor). I also have intermediate
-            knowledge of Node.js, express.js & mongodb .So if you are looking for a front-end developer for your
-            company, I can be the solution you're looking for. I am very much enthusiast
-            to show how my experience and skills meets your needs. <br>
+            have the ability to write semantic, cross-browser compatible, clean code by hand that is re-useable,
+            maintainable, and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap, JavaScript
+            (with jQuery-plugins & React) and WordPress theme customization. I also have intermediate knowledge of
+            Node.js, express.js & MongoDB. So if you are looking for a front-end developer for your company, I can be
+            the solution you're looking for. I am very much enthusiastic to show how my experience and skills meet your
+            needs. <br>
             You can send email directly from here or contact with me via,
           </p>
           <p><i class="fab fa-facebook-square"></i> Muhammad Hasanul Banna</p>
