--- a/index.html
+++ b/index.html
@@ -563,7 +563,15 @@
     </div>
   </section>
   <!-- projects section end  -->
-
+  <!-- Certificate section start -->
+  <div class="container text-center text-white  my-5">
+    <h2 class="mb-5 theme-text "><b>Certificates</b></h2>
+    <div class="row ">
+      <div class="col-md-5 mt-3"><img src="./images/PinkC.png" alt="" class="w-100"></div>
+      <div class="col-md-7"><img src="./images/WhiteC.jpg" alt="" class="w-100"></div>
+    </div>
+  </div>
+  <!-- Certificate section end -->
   <!-- About section start  -->
   <section id="contact">
     <div class="container py-5 text-white">
@@ -610,7 +618,7 @@
   </section>
   <!-- About section end  -->
   <footer>
-    <span><i class="fas fa-copyright"></i> Copyright 2020 | All Right Reserved</span>
+    <span><i class="fas fa-copyright"></i> Copyright 2021 | All Right Reserved</span>
   </footer>
 
   <!-- Font awesome cdn -->
