--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </h1>
           </section>
           <a class="btn btn-brand-main hvr-icon-wobble-horizontal"
-            href="https://www.linkedin.com/in/hasanul-banna-a935421b2/" target="_blank"><i
+            href="https://www.linkedin.com/in/muhammad-hasanul-banna-a935421b2/" target="_blank"><i
               class="fab fa-linkedin hvr-icon"></i> Linked in</a>
           <a class="btn btn-brand-main hvr-icon-wobble-horizontal" href="https://github.com/Hasanul-Banna"
             target="_blank"><i class="fab fa-github hvr-icon"></i> Github</a>
@@ -160,10 +160,10 @@
             <img src="https://img.icons8.com/color/48/000000/firebase.png" />
             <h6>Firebase</h6>
           </div> -->
-          <div>
+          <!-- <div>
             <img style="height: 48px;" src="./images/jQuery.png">
             <h6>jQuery</h6>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -192,13 +192,10 @@
       <div class="col-sm-6  my-3 p-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
         <!-- <h4 class="my-3">Comfortable</h4> -->
         <div class=" d-flex flex-wrap justify-content-between">
+
           <div>
-            <img src="https://img.icons8.com/color/48/000000/wordpress.png" />
-            <h6>Wordpress</h6>
-          </div>
-          <div>
-            <img style="height: 48px" src="./images/materialize.png" />
-            <h6>Materialize</h6>
+            <img src="./images/next.png" />
+            <h6>Next</h6>
           </div>
           <div>
             <img src="https://img.icons8.com/color/48/000000/material-ui.png" />
@@ -579,13 +576,12 @@
       <div class="row ">
         <div class="col-md-6  text-white text-justify">
           <p>I'm Hasanul Banna a front-end web developer, loves to create attractive websites with user-friendly
-            experiences. I'm experienced in developing websites which are fully responsive to all kind of devices. I
+            experiences. I'm experienced in developing websites that are fully responsive to all kinds of devices. I
             have the ability to write semantic, cross-browser compatible, clean code by hand that is re-useable,
-            maintainable, and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap, JavaScript
-            (with jQuery-plugins & React) and WordPress theme customization. I also have intermediate knowledge of
-            Node.js, express.js & MongoDB. So if you are looking for a front-end developer for your company, I can be
-            the solution you're looking for. I am very much enthusiastic to show how my experience and skills meet your
-            needs. <br>
+            maintainable, and easy to understand. The main areas of my expertise are HTML, CSS, Bootstrap, JavaScript ,
+            React & Redux. I also have intermediate knowledge of Next.js Node.js, Express.js & MongoDB. So if you are looking
+            for a front-end developer for your company, I can be the solution you're looking for. I am very much
+            enthusiastic to show you how my experience and skills meet your needs. <br>
             You can send email directly from here or contact with me via,
           </p>
           <p><i class="fab fa-facebook-square"></i> Muhammad Hasanul Banna</p>
@@ -618,7 +614,7 @@
   </section>
   <!-- About section end  -->
   <footer>
-    <span><i class="fas fa-copyright"></i> Copyright 2021 | All Right Reserved</span>
+    <span><i class="fas fa-copyright"></i> Copyright 2022 | All Right Reserved</span>
   </footer>
 
   <!-- Font awesome cdn -->
